src/test/resources/etapa3/failing/constructorNotDeclared.ru
struct A{
    Int b;
}

impl A{
    fn funcion()->void{}
}

start{}